--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,7 @@
-= link_to "Funk Names", search_names_ques_path
 = render 'ques/search'
 
 %h4 These Guys are in Queue
-= link_to "I need help!", new_que_path
-= link_to "Hide Students", "javascript:void(0);", class: "hide_students"
-= link_to "Show Students", "javascript:void(0);", class: "show_students"
-= link_to "Remove Students", "javascript:void(0);", class: "remove_students"
+= link_to "Help me!", help_me_ques_path, method: :post
 %ul.students
   - @people_in_que.each do |person|
     = render 'ques/student', student: person
@@ -19,5 +15,3 @@
     = person.updated_at.strftime("%l:%M%p")
     %br
 
-
-%a.do_something_cool{href: "javascript:void(0);"} Cool Stuff
