--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,4 +1,8 @@
 - if flash[:notice]
   .notice= flash[:notice]
-- elsif flash[:error]
+
+- if flash[:error]
   .error= flash[:error]
+
+- if flash[:alert]
+  .alert= flash[:alert]
