Revert "first commit"
This reverts commit 3ceb35d909a4d57db22c51e70f3c9cc516645a13.

--- a/app/views/layouts/_flash.html.haml
+++ b/app/views/layouts/_flash.html.haml
@@ -1,8 +1,4 @@
 - if flash[:notice]
   .notice= flash[:notice]
-
-- if flash[:error]
+- elsif flash[:error]
   .error= flash[:error]
-
-- if flash[:alert]
-  .alert= flash[:alert]
